2021-01-30  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.71 as supported.
	* autogen.sh: Update comment.

2020-12-08  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.70 as supported.
	* autogen.sh: Update comment.

2020-10-04  Bruno Haible  <bruno@clisp.org>

	Fix warnings from Autoconf 2.69c.
	* configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments.
	* doc/configure.ac: Likewise.
	* lib/configure.ac: Likewise.
	* src/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	AC_CACHE_CHECK, AC_LANG_PUSH/AC_LANG_POP, AC_COMPILE_IFELSE
	* tests/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	ac_cv_c_compiler_gnu instead of ac_cv_prog_gcc, and
	ac_cv_cxx_compiler_gnu instead of ac_cv_prog_gxx. Don't use 'test' with
	option '-a'.

2020-08-30  Bruno Haible  <bruno@clisp.org>

	Make the code C++17 compliant.
	* lib/getline.cc (getstr): Don't use the 'register' keyword.

2020-08-29  Bruno Haible  <bruno@clisp.org>

	Fix link error on native Windows with MSVC/clang.
	* tests/test2.c (SET_BINARY): On native Windows, use _setmode, not
	setmode.

2020-08-29  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac (AC_PREREQ): Require Autoconf >= 2.64.
	* doc/configure.ac (AC_PREREQ): Likewise.
	* lib/configure.ac (AC_PREREQ): Likewise.
	* src/configure.ac (AC_PREREQ): Likewise.
	* tests/configure.ac (AC_PREREQ): Likewise.
	* autogen.sh: Update comment.

2020-02-10  Bruno Haible  <bruno@clisp.org>

	Rely entirely on the GNU Build System.
	* Makefile.vms: Remove file.
	* INSTALL.vms: Remove file.
	* Makefile.in (SOURCE_FILES): Remove them.
	* Makefile.devel (src/config.h_vms): Remove target.
	(totally-clean): Update.
	* src/Makefile.in (GENERATED_FILES): Remove config.h_vms.

2018-10-24  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac (AC_PREREQ): Require Autoconf >= 2.63.
	* doc/configure.ac (AC_PREREQ): Likewise.
	* lib/configure.ac (AC_PREREQ): Likewise.