@@ -1,3 +1,8 @@
+2021-06-06  Michael Drake  <tlsa@netsurf-browser.org>  (tiny change)
+
+	Honor --readonly-tables when outputting table for --ignore-case.
+	* src/output.cc (output_upperlower_table): Add 'const' when suitable.
+
 2021-01-30  Bruno Haible  <bruno@clisp.org>
 
 	Mark Autoconf 2.71 as supported.
